Fix header search alignment

--- a/ckanext/ckanext-apicatalog_ui/less/search.less
+++ b/ckanext/ckanext-apicatalog_ui/less/search.less
@@ -21,6 +21,7 @@
   &.header-search {
     margin: auto;
     width: 356px;
+    padding-bottom: 0;
 
     .search-input {
       margin: 0px;
